index.html is modified

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 <div class="container2">
     <table id="outputTable">
         <tr>
-          <td> Name</td>
-          <td>Age</td> 
-          <td>Gender</td>
-          <td>Course</td>
-          <td>Email</td> 
-          <td>Action</td>
+          <th> Name</th>
+          <th>Age</th> 
+          <th>Gender</th>
+          <th>Course</th>
+          <th>Email</th> 
+          <th>Action</th>
         </tr>
     </table>
 
